--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!-- boostrap -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> <!-- animate-->
-  <link rel="stylesheet" href="../css/main.css"> <!-- css --->
+  <link rel="stylesheet" href="../css/style.css"> <!-- css --->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO-PRODUCTOS</title>
@@ -61,7 +61,7 @@
             <li class="fm__contact__container__info__list--li"><b>E-mail:</b> monbrosimracing@gmail.com</li>
           </ul>
         </div>
-        <div class="fm__contact__container__form bdr__contact col-md-6 col-sm-12">
+        <div class="fm__contact__container__form bdr__contact col-md-6 col-sm-12"> <!--clase generada con @each-->
           <form action="form.php" method="post">
             <h2 class="fm__contact__container__form__h2"> CONTACTANOS</h2>
             <p class="fm__contact__container__form__description">Si tenes alguna duda, pedido o sugerencia completa el
@@ -82,7 +82,7 @@
               <label for="mensaje">Mensaje</label>
               <textarea type="text" id="mensaje" class="form-text_area" placeholder="mensaje"></textarea>
             </div>
-            <input type="submit" class="form-submit bdr__form">
+            <input type="submit" class="form-submit bdr__form"> <!--clase generada con @each-->
           </form>
         </div>
         <div class="fm__contact__container__image d-none d-xl-block col-md-3">
