--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><!-- bootstrap -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> <!-- animate-->
-  <link rel="stylesheet" href="./css/main.css"> <!-- css -->
+  <link rel="stylesheet" href="./css/style.css"> <!-- css -->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO</title>
@@ -67,7 +67,7 @@
         <div class="carousel-inner w-50">
           <div class="carousel-item active">
             <div>
-              <img src="./assets/basic.png" class="d-block w-100 animate__animated animate__fadeInDown animate__fadeIn" alt="cokpit-basic"> <!-- animación img-->
+              <img src="./assets/basic.png" class="d-block w-100 animate__animated animate__fadeInDown" alt="cokpit-basic"> <!-- animación img-->
             </div>
             <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp"> <!-- animación caption-->
               <h5>Modelo BASIC</h5>
