--- a/html/faq.html
+++ b/html/faq.html
@@ -6,16 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Francisco Montini">
   <meta name="copyright" content="Francisco Montini">
-  <meta name="description" content="Cockpits de aluminio para simracing">
+  <meta name="description" content="Tenés alguna duda? Revisa nuestra sección de preguntas frecuentes.">
+  <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
   <link rel="icon" href="./assets/LOGO.ico">
+  <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!-- boostrap -->
-  <link rel="stylesheet" href="../css/style.css"> <!--css-->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
-  <title>MONBRO-PRODUCTOS</title>
+  <!-- boostrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
+  <!--css-->
+  <link rel="stylesheet" href="../css/style.css"> 
+  <title>Faq-MONBRO</title>
 </head>
 
 <body>
@@ -164,11 +168,11 @@
     <div class="container-fluid fm__footer__container">
       <div class="row">
         <div class="fm__footer__container__email col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h2>E-MAIL</h2>
+          <h6>E-MAIL</h6>
           <a href="mailto:monbrosimracing@mail.com" class="text-light">monbrosimracing@gmail.com</a>
         </div>
         <div class="fm__footer__container__links col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h2>LINKS</h2>
+          <h6>LINKS</h6>
           <a href="https://twitter.com/monbrosimracing" target="_blank" class="text-light"><i
               class="fab fa-twitter"></i></a>
           <a href="https://www.instagram.com/monbrosimracing/?hl=es" target="_blank" class="text-light"><i
