--- a/html/products.html
+++ b/html/products.html
@@ -6,17 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Francisco Montini">
   <meta name="copyright" content="Francisco Montini">
-  <meta name="description" content="Cockpits de aluminio para simracing">
+  <meta name="description" content=" Tenemos tres variedades de cockpits que se adaptan a tus necesidades. El modelo Basic, el Pro y el Gt-Pro, cada uno de ellos compatible
+    con todos los perifericos del mercado.">
+  <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
   <link rel="icon" href="./assets/LOGO.ico">
+  <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><!-- bootstrap -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> <!-- animate-->
-  <link rel="stylesheet" href="../css/style.css"> <!-- css -->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
-  <title>MONBRO-PRODUCTOS</title>
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- animate-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> \
+  <!-- css -->
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Productos-MONBRO</title>
 </head>
 
 <body>
@@ -56,7 +62,8 @@
       <div class="row justify-content-around"> <!-- agregue justify para poder ubicar las cards -->
         <div class=" fm__cards col-md-3 col-sm-12 m-2"> <!-- "fm_" clases personales-->
           <div class="card-img fm__cards__img">
-            <img src="../assets/basic.png" class="animate__animated animate__slideInLeft" alt="cockpit-basic"> <!-- animate img-->
+            <img src="../assets/basic.png" class="animate__animated animate__slideInLeft" alt="cockpit-basic">
+            <!-- animate img-->
           </div>
           <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
             <h2>BASIC</h2>
@@ -67,7 +74,8 @@
         </div>
         <div class="fm__cards col-md-3 col-sm-12 m-2">
           <div class="card-img fm__cards__img">
-            <img src="../assets/cockpit - pro.png" class= "animate__animated animate__fadeIn" alt="cockpit-pro"> <!-- animate img-->
+            <img src="../assets/cockpit - pro.png" class="animate__animated animate__fadeIn" alt="cockpit-pro">
+            <!-- animate img-->
           </div>
           <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
             <h2>PRO</h2>
@@ -77,7 +85,8 @@
         </div>
         <div class="fm__cards col-md-3 col-sm-12 m-2">
           <div class="card-img fm__cards__img ">
-            <img src="../assets/gt-pro.png" class= "animate__animated animate__slideInRight"alt="cockpit-gtpro"> <!-- animate img-->
+            <img src="../assets/gt-pro.png" class="animate__animated animate__slideInRight" alt="cockpit-gtpro">
+            <!-- animate img-->
           </div>
           <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
             <h2>GT-PRO</h2>
@@ -95,11 +104,11 @@
     <div class="container-fluid fm__footer__container">
       <div class="row">
         <div class="fm__footer__container__email col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h2>E-MAIL</h2>
+          <h6>E-MAIL</h6>
           <a href="mailto:monbrosimracing@mail.com" class="text-light">monbrosimracing@gmail.com</a>
         </div>
         <div class="fm__footer__container__links col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h2>LINKS</h2>
+          <h6>LINKS</h6>
           <a href="https://twitter.com/monbrosimracing" target="_blank" class="text-light"><i
               class="fab fa-twitter"></i></a>
           <a href="https://www.instagram.com/monbrosimracing/?hl=es" target="_blank" class="text-light"><i
