--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Francisco Montini">
   <meta name="copyright" content="Francisco Montini">
-  <meta name="description" content="Cockpits de aluminio para simracing">
+  <meta name="description"
+    content="Bienvenidos a MONBRO, acá encontraras todo lo necesario para montar tu simulador de carreras y de vuelo.">
+  <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
   <link rel="icon" href="./assets/LOGO.ico">
+  <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><!-- bootstrap -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> <!-- animate-->
-  <link rel="stylesheet" href="./css/style.css"> <!-- css -->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
-  <title>MONBRO</title>
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- animate-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- css -->
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Home - MONBRO</title>
 </head>
 
 <body>
@@ -55,7 +61,8 @@
         <h1 class="fm__h1 col-md-8 col-sm 3 text-align-center m-4">Bienvenidos a una nueva experiencia</h1>
         <!-- "fm__" clase personal-->
       </div>
-      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center" style="padding-bottom: 100px;">
+      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center"
+        style="padding-bottom: 100px;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -67,9 +74,11 @@
         <div class="carousel-inner w-50">
           <div class="carousel-item active">
             <div>
-              <img src="./assets/basic.png" class="d-block w-100 animate__animated animate__fadeInDown" alt="cokpit-basic"> <!-- animación img-->
+              <img src="./assets/basic.png" class="d-block w-100 animate__animated animate__fadeInDown"
+                alt="cokpit-basic"> <!-- animación img-->
             </div>
-            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp"> <!-- animación caption-->
+            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
+              <!-- animación caption-->
               <h5>Modelo BASIC</h5>
               <p>Nuestro modelo <b>BASIC</b> esta construido con perfiles de aluminio tipo bosh lo
                 que le da al conjunto una gran resistencia. Las columanas centrales son de perfiles 4080 mientras que el
@@ -78,9 +87,11 @@
           </div>
           <div class="carousel-item">
             <div>
-            |<img src="./assets/cockpit - pro.png" class="d-block w-100 animate__animated animate__fadeInDown" alt="cockpit-pro"> <!-- animación img-->
+              |<img src="./assets/cockpit - pro.png" class="d-block w-100 animate__animated animate__fadeInDown"
+                alt="cockpit-pro"> <!-- animación img-->
             </div>
-            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp"> <!-- animación caption-->
+            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
+              <!-- animación caption-->
               <h5>PRO</h5>
               <p>El modelo <b>PRO</b> a diferencia del basic esta construido enteramente con
                 perfiles 4080. Pensado para bases direct drive de muchos NM y potencia.</p>
@@ -88,9 +99,11 @@
           </div>
           <div class="carousel-item">
             <div>
-              <img src="./assets/gt-pro.png" class="d-block w-100 animate__animated animate__fadeInDown" alt="gt-pro"> <!-- animación img-->
+              <img src="./assets/gt-pro.png" class="d-block w-100 animate__animated animate__fadeInDown" alt="gt-pro">
+              <!-- animación img-->
             </div>
-            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp"> <!-- animación caption-->
+            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
+              <!-- animación caption-->
               <h5>GT-PRO</h5>
               <p>Nuestro producto mas completo, el <b>GT-PRO</b>. Un conjunto robusto,
                 totalmente regulable en altura, distancia y en inclinacion. Podes elegir configurarlo tipo GT o Formula,
@@ -115,11 +128,11 @@
     <div class="container-fluid fm__footer__container">
       <div class="row">
         <div class="fm__footer__container__email col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h2>E-MAIL</h2>
+          <h6>E-MAIL</h6>
           <a href="mailto:monbrosimracing@mail.com" class="text-light">monbrosimracing@gmail.com</a>
         </div>
         <div class="fm__footer__container__links col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h2>LINKS</h2>
+          <h6>LINKS</h6>
           <a href="https://twitter.com/monbrosimracing" target="_blank" class="text-light"><i
               class="fab fa-twitter"></i></a>
           <a href="https://www.instagram.com/monbrosimracing/?hl=es" target="_blank" class="text-light"><i
